--- a/reactnd-contacts-complete/package.json
+++ b/reactnd-contacts-complete/package.json
@@ -16,6 +16,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "frontend:install": "cd reactnd-contacts-complete && npm install",
+    "backend:install": "cd reactnd-contacts-server && npm install",
+    "frontend:build": "cd reactnd-contacts-complete && npm run build",
+    "backend:build": "cd reactnd-contacts-server && npm run build"
   }
 }
