--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,10 @@ jobs:
           command: |
             npm run backend:install
       - run:
+          name: Back-End Build
+          command: |
+            npm run backend:build
+      - run:
           name: Front-End Build
           command: |
             npm run frontend:build
-      - run:
-          name: Back-End Install
-          command: |
-            npm run backend:build
