--- a/reactnd-contacts-complete/package.json
+++ b/reactnd-contacts-complete/package.json
@@ -18,6 +18,7 @@
     "frontend:install": "cd reactnd-contacts-complete && npm install",
     "backend:install": "cd reactnd-contacts-server && npm install",
     "frontend:build": "cd reactnd-contacts-complete && npm run build",
-    "backend:build": "cd reactnd-contacts-server && npm run build"
+    "backend:build": "cd reactnd-contacts-server && npm run build",
+    "build": "react-scripts build"
   }
 }
